css/style.css
/* ... */
@media screen and (min-width:1024px) {

    .nav-image-link {
        width: 24%;
    }

    .nav-links {
        width: 20%;
    }
}

@media screen and (min-width:1400px) {

    .nav-image-link {
        width: 20%;
    }

    .nav-links {
        width: 15%;
    }
}

/* signup.html && signin.html */

#signup-hold{
    width: 100%;
}

.heading-sign {
    font-size: 3.2rem;
    color: white;
    margin: 0 auto;
    width: 70%;
    text-align: center;
    font-weight: 700;
}

#email, #password {
    color: white;
    border: 2px solid rgba(52, 51, 67, 1);
    background-color: rgba(24, 24, 32, 1);
    font-size: 1.2rem;
    font-weight: 700;
    border-radius: 10px;
    height: 65px;
}

#email:hover, #password:hover {
    border-color: var(--pink);
}

#email:focus, #password:focus {
    border: 3px solid var(--pink);
    box-shadow: none;
}

#email::placeholder, #password::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: rgba(255,255,255,0.8);
    opacity: 0.8; /* Firefox */
  }

#email:-ms-input-placeholder, #password:-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: rgba(255,255,255,0.8);
  }

#email::-ms-input-placeholder, #password::-ms-input-placeholder { /* Microsoft Edge */
    color: rgba(255,255,255,0.8);
  }

.btn-sign {
    background-image: linear-gradient(to top right, var(--pink), var(--yellow-like));
    border-radius: 7px;
    color: white;
    font-weight: 700;
    font-size: 1.5rem;
    height: 60px;
    width: 100%;
    margin: 0 auto;
    text-align: center;
    padding-top: 10px;
    border: thin solid var(--pink);
    box-shadow: 1px 4px var(--pink);
    transition-property: all;
    transition-duration: .4s;
}

.btn-sign:hover {
    transform: translateY(-3px);
    color: white;
}

@media screen and (min-width:475px) {
    #signup-hold{
        width: 450px;
        margin: 0 auto;
    }
}

/* dashboard.html */
.visibility {
    visibility: visible;
}


.cover {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    opacity: 0.4;
    z-index: 11;
}

.content-hold {
    text-align: center;
    color: white;
}

.dash-heading {
    font-size: 2.2rem;
    line-height: 2.25rem;
    font-weight: 600;
}

.link {
    text-decoration: none;
}

.collection-hold {
   display: grid;
   grid-template-columns: auto;
   width: 98%;
   margin: 0 auto;
}


.collection-add {
    background-color: rgba(30, 30, 41, 1);
    border-radius: 1.7rem;
    height: 120px;
    display: flex;
}


.collection-text-hold h2 {
    color: rgb(255, 255, 255);
    font-weight: 700;
    text-align: start;
}

.collection-text-hold p {
    color: rgb(255, 255, 255);
    opacity: 0.6;
    font-weight: 600;
    font-size: 1.15rem;
}

.collection-add-div {
    height: 60px;
    width: 70px;
    color: white;
    font-weight: 600;
    font-size: 1.3rem;
    transition: all 250ms ease 1s;
    line-height: 1.2;
    border-radius: 16px;
    background: rgb(219, 190, 86);
}

.btn-first {
    color: rgba(255, 255, 255, 1);
    cursor: pointer;
    font-size: 1.2rem;
    border-radius: 1rem;
    border: 3px solid rgba(52, 51, 67, 1);
    height: 60px;
    width: 280px;
}

.btn-first:hover {
    background-color: rgba(30, 30, 41, 1);
    border-color: rgba(30, 30, 41, 1);
    color: rgba(255, 255, 255, 1);
}

.hold {
    overflow: auto;
    padding-bottom: 70px;
}

.dash-header {
    background-color: rgba(30, 30, 41, 1);
    font-weight: 600;
    font-size: 1.2rem;
}

.header-dash-content-hold {
    display: flex;
    justify-content: space-between;
}

#head-dash {
    color: rgba(255, 255, 255, 1);
    cursor: pointer;
    text-decoration: none;
    line-height: 3rem;
    border-bottom: 2px solid white;
}

#head-account {
    color: rgba(255, 255, 255, 0.5);
    cursor: pointer;
    text-decoration: none;
    line-height: 3rem;
    padding-right: 20px;
}

.signed-in {
    text-align: left;
    position: absolute;
    top: 8%;
    right: 2%;
    background-color: rgba(30, 30, 41, 1);
    border: rgba(30, 30, 41, 1);
    width: 250px;
    height: 200px;
    border-radius: 6px;
    color: rgba(229,231,235,1);
    box-shadow: 2px 2px rgba(30, 30, 41, 1);
}

.signed-in-small {
    text-align: left;
    position: absolute;
    bottom: 9%;
    right: 2%;
    background-color: rgba(30, 30, 41, 1);
    border: rgba(30, 30, 41, 1);
    width: 250px;
    height: 200px;
    border-radius: 6px;
    color: rgba(229,231,235,1);
    box-shadow: 2px 2px rgba(30, 30, 41, 1);
    transition: ease;
}

.hidden {
    visibility: hidden;
}

#sign-out, #sign-out_small {
    padding-top: 10px;
    width: 100%;
    padding-left: 5px;
    background-color: rgba(30, 30, 41, 1);
    border-color: rgba(30, 30, 41, 1);
    border: rgba(30, 30, 41, 1);
    color: rgba(229,231,235,1);
    font-size: 1.1rem;
    font-weight: 400;
    padding-bottom: 15px;
    cursor: pointer;
    width: 100%;
    text-align: left;
}

#sign-out:hover, #sign-out_small:hover {
    background-color: rgba(52,51,67,1);
}

.dash-footer {
    background-color: rgba(30, 30, 41, 1);
    font-weight: 600;
    font-size: 1.2rem;
    width: 100%;
    height: 80px;
}

.foot-dash-content-hold {
    display: flex;
    justify-content: space-around;
}

#dash-dash {
    color: rgba(255, 255, 255, 1);
    cursor: pointer;
    text-decoration: none;
}

#dash-account {
    color: rgba(255, 255, 255, 0.5);
    text-decoration: none;
}

#account {
    cursor: pointer;
}

#dash-account:hover {
    color: rgba(255, 255, 255, 1);
}

.collection {
    visibility: hidden;
    margin-left: auto;
    margin-right: auto;
    top: 10%;
    left: 0;
    right: 0;
    position: absolute;
    background-color: rgba(30, 30, 41, 1);
    width: 70%;
    margin: 0 auto;
    height: 530px;
    border-radius: 12px;
    z-index: 12;
}

.collectionhead-hold {
    display: flex;
    justify-content: space-between;
    color: white;
}

.collectionhead {
    font-weight: 600;
}

.btn-X {
    color: white;
    font-size: 1.2rem;
}
/* ... */

